overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
   overflow-y: hidden;
   height: 100vh;
   min-height: -webkit-fill-available;
+  overflow: auto;
+  overscroll-behavior: contain;
 }
 
 .App-header {
